--- a/app/routes/result/styles.css
+++ b/app/routes/result/styles.css
@@ -1,3 +1,11 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+}
+
 ol {
     margin-top:15px;
     margin-left: 20px;
